--- a/src/app/navigation/navigation.html
+++ b/src/app/navigation/navigation.html
@@ -34,6 +34,12 @@
         Documents
       </a>
     </li>
+    <li>
+      <a routerLink="/users" routerLinkActive="active" (click)="onNavigationClick()">
+        <i class="icon">👥</i>
+        Users
+      </a>
+    </li>
   </ul>
 
   <!-- User Menu at bottom of navigation -->
